--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   currency-exchange:
-    image: mehrdadghaderi/currency-exchange-service:0.0.1
+    image: mehrdadghaderi/currency-exchange-service:latest
     ports:
       - "8000:8000"
     networks:
@@ -10,11 +10,11 @@ services:
     depends_on:
       - naming-server
     environment:
-      "EUREKA.CLIENT.SERVICEURL.DEFAULTZONE": "http://naming-server:8761/eureka"
-      "SPRING.ZIPKIN.BASEURL": "http://zipkin-server:9411"
+      EUREKA.CLIENT.SERVICEURL.DEFAULTZONE: "http://naming-server:8761/eureka"
+      SPRING.ZIPKIN.BASEURL: "http://zipkin-server:9411"
 
   currency-conversion:
-    image: mehrdadghaderi/currency-conversion-service:0.0.1
+    image: mehrdadghaderi/currency-conversion-service:latest
     ports:
       - "8100:8100"
     networks:
@@ -22,12 +22,12 @@ services:
     depends_on:
       - naming-server
     environment:
-      "EUREKA.CLIENT.SERVICEURL.DEFAULTZONE": "http://naming-server:8761/eureka"
-      "SPRING.ZIPKIN.BASEURL": "http://zipkin-server:9411"
+      EUREKA.CLIENT.SERVICEURL.DEFAULTZONE: "http://naming-server:8761/eureka"
+      SPRING.ZIPKIN.BASEURL: "http://zipkin-server:9411"
 
 
   api-gateway:
-    image: mehrdadghaderi/api-gateway:0.0.1
+    image: mehrdadghaderi/api-gateway:latest
     ports:
       - "8765:8765"
     networks:
@@ -35,11 +35,11 @@ services:
     depends_on:
       - naming-server
     environment:
-      "EUREKA.CLIENT.SERVICEURL.DEFAULTZONE": "http://naming-server:8761/eureka"
-      "SPRING.ZIPKIN.BASEURL": "http://zipkin-server:9411"
+      EUREKA.CLIENT.SERVICEURL.DEFAULTZONE: "http://naming-server:8761/eureka"
+      SPRING.ZIPKIN.BASEURL: "http://zipkin-server:9411"
 
   naming-server:
-    image: mehrdadghaderi/naming-server:0.0.1
+    image: mehrdadghaderi/naming-server:latest
     ports:
       - "8761:8761"
     networks:
